subprojects/PYRAMID/bindings/cpp/generated/pyramid_data_model_autonomy_cabi.h

typedef struct pyramid_Plan_c {
  uint8_t has_update_time;
  double update_time;  /* from Entity */
  pyramid_str_t id;  /* from Entity */
  pyramid_str_t source;  /* from Entity */
  pyramid_str_t planning_requirement_id;
  pyramid_str_t backend_id;
  uint64_t world_version;
  uint32_t replan_count;
  uint8_t plan_success;
  double solve_time_ms;
  pyramid_slice_t step;
  pyramid_str_t compiled_bt_xml;
  uint8_t has_predicted_quality;
  double predicted_quality;
} pyramid_Plan_c;
typedef struct pyramid_RequirementPlacement_c {
  uint8_t has_update_time;
  double update_time;  /* from Entity */
  pyramid_str_t id;  /* from Entity */
  pyramid_str_t source;  /* from Entity */
  pyramid_str_t execution_requirement_id;
  pyramid_str_t planning_requirement_id;
  pyramid_str_t plan_id;
  pyramid_str_t plan_step_id;
  pyramid_str_t target_component;
  pyramid_str_t target_service;
  pyramid_str_t target_type;
  int32_t operation;
  pyramid_str_t target_requirement_id;
  pyramid_slice_t related_entity_id;
  int32_t progress;
} pyramid_RequirementPlacement_c;
typedef struct pyramid_ExecutionRun_c {
  uint8_t has_update_time;
  double update_time;  /* from Entity */
  pyramid_str_t id;  /* from Entity */
  pyramid_str_t source;  /* from Entity */
  pyramid_str_t execution_requirement_id;
  pyramid_str_t planning_requirement_id;
  pyramid_str_t plan_id;
  int32_t state;
  pyramid_Achievement_c achievement;
  uint32_t replan_count;
  pyramid_slice_t outstanding_placement;
} pyramid_ExecutionRun_c;
void pyramid_Plan_c_free(pyramid_Plan_c* value);
void pyramid_RequirementPlacement_c_free(pyramid_RequirementPlacement_c* value);
void pyramid_ExecutionRun_c_free(pyramid_ExecutionRun_c* value);