subprojects/PYRAMID/bindings/ada/generated/pyramid-data_model-autonomy-cabi.ads


   procedure To_C
     (In_Value  : Plan;
      Out_Value : out Pyramid_Plan_C);
   procedure From_C
     (In_Value  : Pyramid_Plan_C;
      Out_Value : out Plan);
   procedure Free_Plan (Value : access Pyramid_Plan_C);
   pragma Import (C, Free_Plan, "pyramid_Plan_c_free");

   procedure To_C
     (In_Value  : Requirement_Placement;
      Out_Value : out Pyramid_Requirement_Placement_C);
   procedure From_C
     (In_Value  : Pyramid_Requirement_Placement_C;
      Out_Value : out Requirement_Placement);
   procedure Free_Requirement_Placement (Value : access Pyramid_Requirement_Placement_C);
   pragma Import (C, Free_Requirement_Placement, "pyramid_RequirementPlacement_c_free");

   procedure To_C
     (In_Value  : Execution_Run;
      Out_Value : out Pyramid_Execution_Run_C);
   procedure From_C
     (In_Value  : Pyramid_Execution_Run_C;
      Out_Value : out Execution_Run);
   procedure Free_Execution_Run (Value : access Pyramid_Execution_Run_C);
   pragma Import (C, Free_Execution_Run, "pyramid_ExecutionRun_c_free");

end Pyramid.Data_Model.Autonomy.Cabi;
